# NVT

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ContextMenu.qml  HighlightLabel.qml  Main.qml  NVT.qrc  Station.qml  StationLabel.qml  StoryTile.qml  _Main.qml  application.hpp  application.qrc  launch.cpp  launch.hpp  load_page.ui.qml  log.txt  main.cpp  main.qml  repeating_texture.cpp  repeating_texture.hpp  timeline.cpp  timeline.hpp  timeline_chain.cpp  timeline_chain.hpp  vcpkg.json
NVT/: Main.qml  application.hpp  main.cpp
NVT/launch/: CMakeLists.txt  launch.cpp  launch.hpp  launch_handle.cpp  launch_handle.hpp  launch_list.cpp  launch_list.hpp
NVT/launch/qml/: Launch.qml  LaunchWindow.qml
NVT/project/: CMakeLists.txt  library.hpp  project.cpp  project.hpp
NVT/qml/: BetterButton.qml  MetroButton.qml  MetroContextMenu.qml  StationLabel.qml
NVT/timeline/: CMakeLists.txt  application.hpp  library.hpp  timeline.cpp  timeline.hpp  timeline_chain.cpp  timeline_chain.hpp  timeline_node.cpp  timeline_node.hpp  timeline_pin.hpp
NVT/timeline/qml/: Chain.qml  Node.qml  Pin.qml  Timeline.qml
launch/: launch.qml
qml/: Chain.qml  Colors.qml  InternalWindow.qml  Launch.qml  MetroButton.qml  MetroContextMenu.qml  MetroMenuBar.qml  Node.qml  Station.qml  StationLabel.qml  TilingTexture.qml  Timeline.qml  pin.qml
src/: application.hpp  main.cpp  main.qml
src/launch/: launch.cpp  launch.hpp  launch.qml
src/shared/: MetroButton.qml  MetroContextMenu.qml  Station.qml  StationLabel.qml
src/timeline/: CMakeLists.txt  timeline.cpp  timeline.hpp  timeline.qml  timeline_chain.cpp  timeline_chain.hpp  timeline_node.hpp  timeline_pin.cpp  timeline_pin.hpp
src/timeline/qml/: Chain.qml  Node.qml  Pin.qml  Timeline.qml
timeline/: timeline.qml
